force-app/main/default/objects/Location__c/fields/Country_Id__c.field-meta.xml
<CustomField>
    <fullName>Country_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country Id</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>