force-app/main/default/objects/Location__c/fields/State_Id__c.field-meta.xml
<CustomField>
    <fullName>State_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State Id</label>
    <referenceTo>State__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>